--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<header class="background">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title class="titulo">Projeto agrinho</title>
+</head>
+<body>
+    <header class="texto">
+        Horta vertical é uma técnica que dispensa a necessidade de canteiros de terra. Pode ser feita com terra ou com água utilizando a técnica da hidroponia. A horta vertical é uma técnica a ser adotada onde há pouco espaço disponível para manutenção de hortas convencionais; permite o cultivo de hortaliças orgânicas para aproveitamento do espaço vertical.
 
+        As técnicas comumente utilizadas possibilitam um cultivo orgânico de hortaliças, dispensando a necessidade de canteiros de terra, embora não dispensando o uso da terra. É diferente da hidroponia, cujo sistema de plantio depende de adubação química, incompatível com um sistema orgânico de cultivo.
+
+        Para a confecção de canteiros utilizando materiais recicláveis, a escolha vai depender da vontade de cada pessoa, de conformidade com o ambiente em que ela pretende instalar a horta.
+
+        
+    </header>
+</body>
+</header>
+</html>
