--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <header class="texto">
         Horta vertical é uma técnica que dispensa a necessidade de canteiros de terra. Pode ser feita com terra ou com água utilizando a técnica da hidroponia. A horta vertical é uma técnica a ser adotada onde há pouco espaço disponível para manutenção de hortas convencionais; permite o cultivo de hortaliças orgânicas para aproveitamento do espaço vertical.
 
-        As técnicas comumente utilizadas possibilitam um cultivo orgânico de hortaliças, dispensando a necessidade de canteiros de terra, embora não dispensando o uso da terra. É diferente da hidroponia, cujo sistema de plantio depende de adubação química, incompatível com um sistema orgânico de cultivo.
+        O cultivo de hortaliças em espaço reduzido tem se tornado prática comum em ambientes urbanos. Aproveitam-se varandas de apartamentos e pequenos quintais para o cultivo orgânico de hortaliças (livres de agrotóxicos e adubos químicos) para o consumo familiar.
 
-        Para a confecção de canteiros utilizando materiais recicláveis, a escolha vai depender da vontade de cada pessoa, de conformidade com o ambiente em que ela pretende instalar a horta.
+        <img src="Todo-o-muro-foi-preenchido-com-a-horta-vertical-com-garrafa-pet.-Fonte-Pinterest.webp" alt="">
 
-        
-    </header>
+    </header> 
 </body>
 </header>
 </html>
