--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<header class="background">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title class="titulo">Projeto agrinho</title>
+<head class="background">
+       <meta charset="UTF-8">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Projeto agrinho 2ºB</title>
+       <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="texto">
@@ -16,5 +16,4 @@
 
     </header> 
 </body>
-</header>
 </html>
