--- a/index.html
+++ b/index.html
@@ -6,14 +6,52 @@
        <title>Projeto agrinho 2ºB</title>
        <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body" >
     <header class="texto">
-        Horta vertical é uma técnica que dispensa a necessidade de canteiros de terra. Pode ser feita com terra ou com água utilizando a técnica da hidroponia. A horta vertical é uma técnica a ser adotada onde há pouco espaço disponível para manutenção de hortas convencionais; permite o cultivo de hortaliças orgânicas para aproveitamento do espaço vertical.
+    <h1>
+Horta Vertical
+    </h1>
+       <p>Horta vertical é uma técnica que dispensa a necessidade de canteiros de terra. Pode ser feita com terra ou com água utilizando a técnica da hidroponia. A horta vertical é uma técnica a ser adotada onde há pouco espaço disponível para manutenção de hortas convencionais; permite o cultivo de hortaliças orgânicas para aproveitamento do espaço vertical.
 
-        O cultivo de hortaliças em espaço reduzido tem se tornado prática comum em ambientes urbanos. Aproveitam-se varandas de apartamentos e pequenos quintais para o cultivo orgânico de hortaliças (livres de agrotóxicos e adubos químicos) para o consumo familiar.
+        O cultivo de hortaliças em espaço reduzido tem se tornado prática comum em ambientes urbanos. Aproveitam-se varandas de apartamentos e pequenos quintais para o cultivo orgânico de hortaliças (livres de agrotóxicos e adubos químicos) para o consumo familiar.</p> 
 
         <img src="Todo-o-muro-foi-preenchido-com-a-horta-vertical-com-garrafa-pet.-Fonte-Pinterest.webp" alt="">
 
     </header> 
+    <section>
+        <h1 class="tutorial" > Como construir uma horta em casa ?</h1>
+        <p>
+            Como montar sua horta vertical
+            Você pode encontrar no mercado diversas opções de suportes e vasos para a sua horta vertical. Contudo, também é possível fazer a sua própria horta com alguns materiais simples. É possível fazer uma horta vertical com garrafas pet ou pallets, por exemplo. No tutorial abaixo, vamos explicar passo a passo como montar a sua horta utilizando pedaços de tábua. Vem com a gente!
+
+               <img src="Horta-vertical-em-estrutura-feita-com-garrafas-PET-Foto-de-Gayo-Maxx (1).webp" alt="">
+        <h1>Como montar uma horta suspensa com garrafa pet</h1>
+
+        <p> Materiais necessários:
+        Garrafas PET;
+            Pregos grandes ou parafusos;
+            Martelo;
+            Tesoura; 
+            Fios e/ou cabos resistentes.
+            Como montar:
+            Pegue as garrafas PET e faça
+                furos nas regiões da tampa e
+                fundo das garrafas;
+                Pegue a tesoura e recorte
+                    uma abertura na lateral das
+                    garrafas, por onde as plantas
+                    serão cultivadas;
+                Passe os cabos/fios pelos
+                    furos, deixando-os da altura
+                    que você deseja que fique sua
+                    horta. Faça nós nas pontas,
+                    para que toda a estrutura seja
+                    fixada com segurança;
+                Por fim, é só colocar terra,
+                    sementes e não se esquecer
+                    de regar sua horta com
+                    frequência.
+            </p>
+    </section>
 </body>
 </html>
