--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <h1>
 Horta Vertical
     </h1>
-       <p>Horta vertical é uma técnica que dispensa a necessidade de canteiros de terra. Pode ser feita com terra ou com água utilizando a técnica da hidroponia. A horta vertical é uma técnica a ser adotada onde há pouco espaço disponível para manutenção de hortas convencionais; permite o cultivo de hortaliças orgânicas para aproveitamento do espaço vertical.
-
-        O cultivo de hortaliças em espaço reduzido tem se tornado prática comum em ambientes urbanos. Aproveitam-se varandas de apartamentos e pequenos quintais para o cultivo orgânico de hortaliças (livres de agrotóxicos e adubos químicos) para o consumo familiar.</p> 
+       <p>Quando adotamos o conceito da horta vertical, colocamos em prática o hábito de cuidar da nossa saúde e da saúde das pessoas que amamos, evitando consumir alimentos cultivados convencionalmente com compostos químicos. Como mencionamos acima, essa é também uma boa maneira de contribuir mais com o meio ambiente, uma vez que o solo não é agredido e o cultivo da horta utiliza adubos naturais.</p> 
 
         <img src="Todo-o-muro-foi-preenchido-com-a-horta-vertical-com-garrafa-pet.-Fonte-Pinterest.webp" alt="">
 
@@ -52,6 +50,10 @@ Horta Vertical
                     de regar sua horta com
                     frequência.
             </p>
+
+        <p>Referências: https://www2.ufrb.edu.br/petsocioambientais/images/Horta_Suspensa.pdf       
+         <p> Referências: https://blog.lemaremoveis.com.br/horta-vertical-em-casa/</p>
+         <p>Referências: https://www.casamineira.com.br/blog/horta-vertical/</p>
     </section>
 </body>
 </html>
